fix: search suggestions overflow

--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -1,18 +1,23 @@
+@media screen and (min-width: 1024px) {
+    .searchbar form{
+      max-height: 45px;
+    }
+  }
 @media screen and (max-width: 1024px) {
-    .searchbar form {
-        position: fixed;
-        top: calc(var(--navbar-height) + var(--toolbar-height));
-        right: 0;
-        bottom: 0;
-        left: 0;
-        width: 100%;
-        height: 100vh;
-        margin: 0;
-        padding: 5rem;
-        z-index: 9999;
-    }
+.searchbar form {
+    position: fixed;
+    top: calc(var(--navbar-height) + var(--toolbar-height));
+    right: 0;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    margin: 0;
+    padding: 5rem;
+    z-index: 9999;
+}
 
-    .searchbar form input.search-input {
-        border-bottom: 1px solid #374d55;
-    }
+.searchbar form input.search-input {
+    border-bottom: 1px solid #374d55;
+}
 }
